# LDK_Agent_Team_HLAI

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  deliverable.json  pyproject.toml  requirements-dev.txt  requirements-ui.txt  requirements.txt  validate_outputs.py
adk/: __main__.py
alignment/: module_dependency_map.md
archive/: 06_storyboard_agent_state.json  learning_architect_curriculum_review.md  pilot_review_summary.md  validate_all_outputs.py
assessments/: assessment_alignment.md
cli/: adk.py
config/: run_config.json
curriculum/: module_2_outcomes.md  module_3_outcomes.md  module_4_outcomes.md
docs/: HOW_TO_USE.md  RELEASE_PROCESS.md  architecture_blueprint_v0.6.md  operator_quick_reference.md  pilot_quality_proof.md  production_readiness_v0_5_1.md  release_notes_v0.5.2.md  repo_hygiene.md  run_report_20260206_004746.md  team_test_cycle_1_report.md  team_testing_plan.md  test_inputs_summary.md  v0.5.2_RELEASE_STATUS.md  v0.6_phase1_report.json  v0.6_phase2_report.json  v0.6_phase5_implementation_plan.md
governance/: approval_gates.md  approval_ledger.jsonl  approval_ledger.py  approvers.json  ledger.py  locked_decisions.md
inputs/: business_brief.md  sme_notes.md  sme_notes.md.bak
orchestrator/: approval_handler.py  audit.py  course_architecture.py  json_tools.py  logging_config.py  media_spec.py  root_agent.py  run_artifacts.py  validation.py
schemas/: agent_output_contract.json  agent_output_contract.py  course_architecture.json  learning_object.json  media_spec.json  system_state.json  system_state.py
scripts/: bootstrap_genesis_pack.py  bundle_export.py  ci_check.sh  enforce_promotion_guard.py  generate_director_demo_pack.py  local_ci.sh  new_course_inputs.py  pilot_batch_run.py  preflight_check.py  resume_run.py  run_content_consistency.py  run_diff.py  run_pilot.py  run_pilot_acceptance.py  run_pipeline.py  run_quality_review.py  run_report.py  validate_course_architecture.py  verify_failure_injection.py  verify_golden_run.py  verify_provider_routing.py  verify_risk_gates.py  verify_run_diff.py  verify_severity_gating.py
services/: delivery_packager.py
skills/: assessment_designer.md  change_management.md  instructional_designer.md  learner_research.md  learning_architect.md  media_producer.md  operations_librarian.md  qa.md  shared.md  storyboard.md  strategy_lead.md
tests/: conftest.py  (+35 more)
(+138 files in other folders)
